# roof-materials-cnn

./: .gitignore  README.md  pyproject.toml  requirements.txt
scripts/: prepare_to_coco.py
tests/: test_dataset.py  test_model.py
