[project]
name = "roof-materials-cnn"
version = "0.1.0"
description = "A project for classifying roof materials using CNNs."
requires-python = ">=3.8,<4"
license = { text = "MIT" }
authors = [{ name = "Ethan Sager", email = "es1772@georgetown.edu" }]
dependencies = [
  "PyYAML>=6.0.1", # for SAM
  "geopandas", # for YOLOv11
  "matplotlib",
  "numpy",
  "opencv-python",
  "pandas",
  "rasterio",
  "requests>=2.32.3",
  "shapely",
  "torch>=2.1",
  "torchvision>=0.16",
  "tqdm",
  "transformers>=4.43",
  "ultralytics>=8.2",
  "wandb",
]

[build-system]
requires = ["hatchling>=1.18.0"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["models", "utils"]
py-modules = ["train", "evaluate", "inference"]
